Basic Styling jobs board

--- a/app/views/jobs/new.html.haml
+++ b/app/views/jobs/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New job
+#jobs
+	.job
+		%h2 New job
 
-= render 'form'
+	= render 'form'
 
-= link_to "Back", root_path
+	= link_to "Back", root_path
